Edit emailTemplate & UserList
- emailTemplate.html -> Edit the email template
- UserList.vue -> Edited the user data table list (work in progress)

--- a/APICode/src/main/resources/templates/emailTemplate.html
+++ b/APICode/src/main/resources/templates/emailTemplate.html
@@ -28,7 +28,7 @@
                     <p style="line-height: 140%; font-size: 14px; text-align: center;margin: 0;">
                       <span style="font-family: helvetica, sans-serif; font-size: 18px; line-height: 25.2px; color: #ffffff;">
                       <span id="text" style="line-height: 25.2px; font-size: 18px;">
-                      Your account has been successfully registered. <br>To access your account, please click the link below.
+                      Your account has been successfully registered. <br>Before you can access your account, please click the link below to verify your account!
                       </span>
                       </span>
                     </p>
@@ -37,11 +37,11 @@
               </table>
               <table style="font-family:arial,helvetica,sans-serif;" cellpadding="0" cellspacing="0" width="100%" border="0">
                 <tr><td style="auto;overflow-wrap:break-word;word-break:break-word;padding:32px 62px 20px 40px;font-family:arial,helvetica,sans-serif;" align="left">
-                  <div style="margin:auto;width:300px; height:auto;background-color:#FFFFFFBB;color: #cec9c9; line-height: 140%; text-align: left; word-wrap: break-word;">
+                  <div style="margin:auto;width:400px; height:auto;background-color:#FFFFFFBB;color: #cec9c9; line-height: 140%; text-align: left; word-wrap: break-word;">
                     <p style="padding-top: 26px;padding-bottom: 26px; middle;line-height: 140%; font-size: 14px; text-align: center;margin: 0;">
                       <span style="vertical-align: middle;font-family: helvetica, sans-serif; font-size: 18px; line-height: 25.2px; color: #1f1f1f;">
                       <span style="line-height: 25.2px; font-size: 16.5px;">
-                      <strong>Token: <span th:text="${token}" id="function1-user"></span><br>
+                      <strong>Link: <a><span th:text="${token}" id="function1-user"></span></a><br>
                       </span>
                       </span>
                     </p>
@@ -51,15 +51,15 @@
               <table style="font-family:arial,helvetica,sans-serif;padding-bottom:90px" cellpadding="0" cellspacing="0" width="100%" border="0">
                 <tr><td style="overflow-wrap:break-word;word-break:break-word;padding:44px 10px;font-family:arial,helvetica,sans-serif;" align="left">
                   <div  align="center">
-                    <a href="http://localhost:8080/login" style="box-sizing: border-box;display: inline-block;font-family:arial,helvetica,sans-serif;text-decoration: none;text-align: center;color: #FFFFFF; background-color: #1848b8; border-radius: 27px; width:39%; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word;">
+                    <!-- <a href="http://localhost:8080/login" style="box-sizing: border-box;display: inline-block;font-family:arial,helvetica,sans-serif;text-decoration: none;text-align: center;color: #FFFFFF; background-color: #1848b8; border-radius: 27px; width:39%; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word;"> -->
                     <span style="display:block;padding:13px 30px;line-height:120%;">
                     <strong>
                     <span style="font-size: 18px; line-height: 21.6px; font-family: arial, helvetica, sans-serif;">
-                    Log In
+                    Please copy and paste the link into the browser.
                     </span>
                     </strong>
                     </span>
-                    </a>
+                    <!-- </a> -->
                   </div>
                 </td></tr>
               </table>
