--- a/APICode/src/main/resources/templates/emailTemplate.html
+++ b/APICode/src/main/resources/templates/emailTemplate.html
@@ -4,7 +4,7 @@
     <table style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;vertical-align: top;min-width: 320px;Margin: 0 auto;background-color: #ffffff;width:100%" cellpadding="0" cellspacing="0">
       <tr style="vertical-align: top"><td style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
         <div style="margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #13181b;">
-          <img align="left" border="0" src="https://i.imgur.com/kLMUMZx.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
+          <img align="left" border="0" src="https://i.imgur.com/bA5ZqPm.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
         </div>
         <div style="padding-top: 10px;padding-bottom: 10px;">
           <div style="background-image: url('https://i.imgur.com/o3KR3Hw.jpeg');margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #ffffff;">
@@ -110,7 +110,7 @@
     <table style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;vertical-align: top;min-width: 320px;Margin: 0 auto;background-color: #ffffff;width:100%" cellpadding="0" cellspacing="0">
       <tr style="vertical-align: top"><td style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
         <div style="margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #13181b;">
-          <img align="left" border="0" src="https://i.imgur.com/kLMUMZx.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
+          <img align="left" border="0" src="https://i.imgur.com/bA5ZqPm.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
         </div>
         <div style="padding-top: 10px;padding-bottom: 10px;">
           <div style="background-image: url('https://i.imgur.com/o3KR3Hw.jpeg');margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #ffffff;">
@@ -189,7 +189,7 @@
     <table style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;vertical-align: top;min-width: 320px;Margin: 0 auto;background-color: #ffffff;width:100%" cellpadding="0" cellspacing="0">
       <tr style="vertical-align: top"><td style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
         <div style="margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #13181b;">
-          <img align="left" border="0" src="https://i.imgur.com/kLMUMZx.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
+          <img align="left" border="0" src="https://i.imgur.com/bA5ZqPm.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
         </div>
         <div style="padding-top: 10px;padding-bottom: 10px;">
           <div style="background-image: url('https://i.imgur.com/o3KR3Hw.jpeg');margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #ffffff;">
@@ -281,7 +281,7 @@
     <table style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;vertical-align: top;min-width: 320px;Margin: 0 auto;background-color: #ffffff;width:100%" cellpadding="0" cellspacing="0">
       <tr style="vertical-align: top"><td style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
         <div style="margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #13181b;">
-          <img align="left" border="0" src="https://i.imgur.com/kLMUMZx.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
+          <img align="left" border="0" src="https://i.imgur.com/bA5ZqPm.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
         </div>
         <div style="padding-top: 10px;padding-bottom: 10px;">
           <div style="background-image: url('https://i.imgur.com/o3KR3Hw.jpeg');margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #ffffff;">
@@ -372,7 +372,7 @@
     <table style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;vertical-align: top;min-width: 320px;Margin: 0 auto;background-color: #ffffff;width:100%" cellpadding="0" cellspacing="0">
       <tr style="vertical-align: top"><td style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
         <div style="margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #13181b;">
-          <img align="left" border="0" src="https://i.imgur.com/kLMUMZx.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
+          <img align="left" border="0" src="https://i.imgur.com/bA5ZqPm.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
         </div>
         <div style="padding-top: 10px;padding-bottom: 10px;">
           <div style="background-image: url('https://i.imgur.com/o3KR3Hw.jpeg');margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #ffffff;">
@@ -450,7 +450,7 @@
     <table style="border-collapse: collapse;table-layout: fixed;border-spacing: 0;vertical-align: top;min-width: 320px;Margin: 0 auto;background-color: #ffffff;width:100%" cellpadding="0" cellspacing="0">
       <tr style="vertical-align: top"><td style="word-break: break-word;border-collapse: collapse !important;vertical-align: top">
         <div style="margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #13181b;">
-          <img align="left" border="0" src="https://i.imgur.com/kLMUMZx.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
+          <img align="left" border="0" src="https://i.imgur.com/bA5ZqPm.png" alt="Image" title="Image" style="padding:20px; padding-left:50px; outline: none;text-decoration: none;display: inline-block !important;border: none;height: auto;float: none;width: 29%;max-width: 69.6px;" width="69.6"/>
         </div>
         <div style="padding-top: 10px;padding-bottom: 10px;">
           <div style="background-image: url('https://i.imgur.com/o3KR3Hw.jpeg');margin: 0 auto;min-width: 320px;max-width: 600px;overflow-wrap: break-word;word-wrap: break-word;word-break: break-word;background-color: #ffffff;">
