Fix the edge case

--- a/RestaurantMapper/views/index.html
+++ b/RestaurantMapper/views/index.html
@@ -1,1 +1,14 @@
-hello world
+<html>
+  <head>
+    <title>SwissHack Restaurant Mapper</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+    <link rel="stylesheet" href="/public/onemap-leaflet.css" />
+    <script src="/public/onemap-leaflet.js"></script>
+    <!-- <script src="https://cdn.onemap.sg/leaflet/onemap-leaflet.js"></script> -->
+  </head>
+  <body>
+    <div id="map" style="height: 800px"></div>
+  </body>
+</html>
+
+<script src="/public/index.js"></script>
