--- a/APICode/src/main/resources/templates/emailTemplate.html
+++ b/APICode/src/main/resources/templates/emailTemplate.html
@@ -52,13 +52,17 @@
                 <tr><td style="overflow-wrap:break-word;word-break:break-word;padding:44px 10px;font-family:arial,helvetica,sans-serif;" align="left">
                   <div  align="center">
                     <!-- <a href="http://localhost:8080/login" style="box-sizing: border-box;display: inline-block;font-family:arial,helvetica,sans-serif;text-decoration: none;text-align: center;color: #FFFFFF; background-color: #1848b8; border-radius: 27px; width:39%; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word;"> -->
-                    <span style="display:block;padding:13px 30px;line-height:120%;">
-                    <strong>
-                    <span style="font-size: 18px; line-height: 21.6px; font-family: arial, helvetica, sans-serif;">
-                    Please copy and paste the link into the browser.
-                    </span>
-                    </strong>
-                    </span>
+                      <div style="margin:auto;width:400px; height:auto;background-color:#FFFFFFBB;color: #cec9c9; line-height: 140%; text-align: left; word-wrap: break-word;">
+                        <p style="padding-top: 26px;padding-bottom: 26px; middle;line-height: 140%; font-size: 14px; text-align: center;margin: 0;">
+                          <span style="display:block;padding:13px 30px;line-height:120%;">
+                            <strong>
+                              <span style="font-size: 16px; line-height: 21.6px; font-family: arial, helvetica, sans-serif;">
+                                If you cannot click on the link, please copy and paste the link into the browser.
+                              </span>
+                            </strong>
+                          </span>
+                        </p>
+                      </div>
                     <!-- </a> -->
                   </div>
                 </td></tr>
@@ -158,13 +162,17 @@
               <tr><td style="overflow-wrap:break-word;word-break:break-word;padding:44px 10px;font-family:arial,helvetica,sans-serif;" align="left">
                 <div  align="center">
                   <!-- <a href="http://localhost:8080/login" style="box-sizing: border-box;display: inline-block;font-family:arial,helvetica,sans-serif;text-decoration: none;text-align: center;color: #FFFFFF; background-color: #1848b8; border-radius: 27px; width:39%; max-width:100%; overflow-wrap: break-word; word-break: break-word; word-wrap:break-word;"> -->
-                  <span style="display:block;padding:13px 30px;line-height:120%;">
-                  <strong>
-                  <span style="font-size: 18px; line-height: 21.6px; font-family: arial, helvetica, sans-serif;">
-                  Please copy and paste the link into the browser.
-                  </span>
-                  </strong>
-                  </span>
+                    <div style="margin:auto;width:400px; height:auto;background-color:#FFFFFFBB;color: #cec9c9; line-height: 140%; text-align: left; word-wrap: break-word;">
+                      <p style="padding-top: 26px;padding-bottom: 26px; middle;line-height: 140%; font-size: 14px; text-align: center;margin: 0;">
+                        <span style="display:block;padding:13px 30px;line-height:120%;">
+                          <strong>
+                            <span style="font-size: 18px; line-height: 21.6px; font-family: arial, helvetica, sans-serif;">
+                              Please copy and paste the link into the browser.
+                            </span>
+                          </strong>
+                        </span>
+                      </p>
+                    </div>
                   <!-- </a> -->
                 </div>
               </td></tr>
