--- a/APICode/src/main/resources/templates/emailTemplate.html
+++ b/APICode/src/main/resources/templates/emailTemplate.html
@@ -56,7 +56,7 @@
                         <p style="padding-top: 26px;padding-bottom: 26px; middle;line-height: 140%; font-size: 14px; text-align: center;margin: 0;">
                           <span style="display:block;padding:13px 30px;line-height:120%;">
                             <strong>
-                              <span style="font-size: 16px; line-height: 21.6px; font-family: arial, helvetica, sans-serif;">
+                              <span style="font-size: 16px; line-height: 21.6px; font-family: arial, helvetica, sans-serif;color: #1f1f1f;">
                                 If you cannot click on the link, please copy and paste the link into the browser.
                               </span>
                             </strong>
@@ -166,8 +166,8 @@
                       <p style="padding-top: 26px;padding-bottom: 26px; middle;line-height: 140%; font-size: 14px; text-align: center;margin: 0;">
                         <span style="display:block;padding:13px 30px;line-height:120%;">
                           <strong>
-                            <span style="font-size: 18px; line-height: 21.6px; font-family: arial, helvetica, sans-serif;">
-                              Please copy and paste the link into the browser.
+                            <span style="font-size: 18px; line-height: 21.6px; font-family: arial, helvetica, sans-serif;color: #1f1f1f;">
+                              If you cannot click on the link, please copy and paste the link into the browser.
                             </span>
                           </strong>
                         </span>
